# stride

./: README.md  ordo.yaml  pyproject.toml  stride.yaml  system-design.md
.github/workflows/: ci.yml  release.yml
ordo/: __init__.py  cli.py  config.py  errors.py  lister.py  runner.py  validator.py
stride/: cli.py  config.py  errors.py  lister.py  runner.py  validator.py
tests/: conftest.py  test_config.py  test_lister.py  test_runner.py  test_validator.py
