[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ordo-cli"
dynamic = ["version"]
description = "Structured command runner — a clean alternative to make"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
ordo = "ordo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ordo*"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]